# dao-science

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AUDIT_FIX_LOG_2026-06-13.en.md  AUDIT_FIX_LOG_2026-06-13.md  AUDIT_REPORT_2026-06-13.en.md  AUDIT_REPORT_2026-06-13.md  AUDIT_REPORT_2026-06-14.en.md  AUDIT_REPORT_2026-06-14.md  AUDIT_REPORT_2026-06-14_SELF_REFLEXIVE.md  AUDIT_REPORT_2026-06-14_工程化审计.md  BEFORE_YOU_READ_ANYTHING.md  CLAIMS.en.md  CLAIMS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  FINAL_VISION.en.md  FINAL_VISION.md  GLOSSARY.en.md  GLOSSARY.md  LICENSE  Makefile  NOTATION.en.md  NOTATION.md  POSITIONING.en.md  POSITIONING.md  README.en.md  README.md  TRANSLATION.en.md  TRANSLATION.md  mkdocs.yml  pyproject.toml  requirements.txt  对话记录.en.md  对话记录.md  对话记录2.en.md  对话记录2.md  认知过程正在进行时_书籍.en.md
.github/: PULL_REQUEST_TEMPLATE.md
.serena/: project.yml
0_motivation/: L0_L7_operationalization.en.md  L0_L7_operationalization.md  L0_L7_spectrum.en.md  L0_L7_spectrum.md  abstraction_dialogue.en.md  abstraction_dialogue.md  cognition_in_progress.en.md  cognition_in_progress.md  objections_and_replies.en.md  objections_and_replies.md  project_map.en.md  project_map.md  why_this_matters.en.md  why_this_matters.md
1_first_principles/: 01_dao_as_process.en.md  01_dao_as_process.md  02_one_as_bandwidth.en.md  02_one_as_bandwidth.md  03_map_not_territory.en.md  03_map_not_territory.md  04_philosophy_of_science.en.md  04_philosophy_of_science.md  05_first_person_epistemology.en.md  05_first_person_epistemology.md  06_emergence.en.md  06_emergence.md  07_cost_of_deviation.en.md  07_cost_of_deviation.md  08_space_time_and_modeling.en.md  08_space_time_and_modeling.md  09_node_and_translation.en.md  09_node_and_translation.md  10_de_and_ming.en.md  10_de_and_ming.md  11_scale_and_moral_silence.en.md  11_scale_and_moral_silence.md
2_models/: 100ms_model.en.md  100ms_model.md  attention_model.en.md  attention_model.md  dmn_self_model.en.md  dmn_self_model.md  hypoxia_fifty_demons.en.md  hypoxia_fifty_demons.md  neuroplasticity_loop.en.md  neuroplasticity_loop.md  relational_attunement.en.md  relational_attunement.md  social_cognition.en.md  social_cognition.md
3_methodology/: li_ru.en.md  li_ru.md  n_of_1_protocol.en.md  n_of_1_protocol.md
(+109 files in other folders)
